# cgp

./: CMakeLists.txt
CGP_test/: CMakeLists.txt  test.cpp
include/: cgp.h  cgp_genome.h
src/: cgp.cpp  cgp_genome.cpp
